(fix) Remove double border from Patient Header details panel

--- a/packages/framework/esm-styleguide/src/patient-banner/contact-details/patient-banner-contact-details.module.scss
+++ b/packages/framework/esm-styleguide/src/patient-banner/contact-details/patient-banner-contact-details.module.scss
@@ -6,7 +6,6 @@
 .contactDetails {
   color: $text-02;
   width: 100%;
-  border-top: 1px solid $ui-03;
 }
 
 .heading {
